--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 	},
 	"main": "jquery.recurrence.js",
 	"dependencies": {
-		"jquery": "~2.1.1",
-		"moment": "~2.22.2",
-		"rrule": "~2.1.0"
+		"jquery": "^2.1.1 || ~3.6.0",
+		"moment": "^2.22.2",
+		"rrule": "^2.1.0"
 	}
 }
