--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	},
 	"main": "ws-forms-recurrence.js",
 	"dependencies": {
-		"jquery": "^2.1.1 || ~3.6.0",
 		"rrule": "^2.1.0"
+	},
+	"devDependencies": {
+		"jquery": "^2.1.1 || ~3.6.0"
 	}
 }
