--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ws-forms-recurrence",
-	"version": "0.3.2",
+	"version": "0.4.0",
 	"description": "A jQuery widget for specifying event recurrences in scheduling systems.",
 	"author": "Aram Kocharyan and Eric Winter",
 	"homepage": "https://github.com/wintersoft-co/ws-forms-recurrence",
@@ -22,9 +22,11 @@
 	},
 	"main": "ws-forms-recurrence.js",
 	"dependencies": {
-		"rrule": "^2.1.0"
 	},
 	"devDependencies": {
 		"jquery": "^2.1.1 || ~3.6.0"
+	},
+	"optionalDependencies": {
+		"luxon": "^2.2.0"
 	}
 }
