--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ws-forms-recurrence",
-	"version": "0.4.0",
+	"version": "0.4.1",
 	"description": "A jQuery widget for specifying event recurrences in scheduling systems.",
 	"author": "Aram Kocharyan and Eric Winter",
 	"homepage": "https://github.com/wintersoft-co/ws-forms-recurrence",
@@ -27,6 +27,6 @@
 		"jquery": "^2.1.1 || ~3.6.0"
 	},
 	"optionalDependencies": {
-		"luxon": "^2.2.0"
+		"luxon": "^2.2.0 || ^3.0"
 	}
 }
